# neurofab-z1-cluster

./: .gitignore  CHANGELOG.md  COMPILATION_VERIFICATION_REPORT.md  COMPLETE_SYSTEM_SUMMARY.md  CONSISTENCY_REVIEW_REPORT.md  DOCUMENTATION_FIXES_NEEDED.md  EMULATOR_TEST_RESULTS.md  FINAL_BUILD_STATUS.md  FINAL_QA_REPORT.md  FINAL_QA_VERIFICATION_PASSED.md  FINAL_SUMMARY.md  FINAL_SYSTEM_QA_REPORT.md  FINAL_VERIFICATION.md  FIRMWARE_ARCHITECTURE_SUMMARY.md  FIRMWARE_AUDIT_REPORT.md  FIRMWARE_STATUS_ASSESSMENT.md  FIRMWARE_STATUS_FINAL.md  FIXES_APPLIED.md  FIXES_APPLIED_REPORT.md  HTTP_SERVER_COMPLETE.md  MNIST_TRAINING_RESULTS.md  MULTI_BACKPLANE_QUICKSTART.md  NEURON_ID_FIX_STATUS.md  P0_FIXES_COMPLETE.md  PROJECT_SUMMARY.md  QA_VERIFICATION_CRITICAL_BUGS.md  QA_VERIFICATION_REPORT.md  QUALITY_CHECK_REPORT.md  README.md  README_old.md  SNN_IMPLEMENTATION_STATUS.md  SNN_PSRAM_ARCHITECTURE.md  SNN_REFACTORING_COMPLETE.md  STDP_IMPLEMENTATION.md  STDP_IMPLEMENTATION_PROGRESS.md  STDP_SUCCESS_REPORT.md  XOR_TEST_RESULTS_AND_ROOT_CAUSE.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_WALKTHROUGH.md  DEVELOPER_GUIDE.md  SNN_GUIDE.md  USER_GUIDE.md  firmware_development_guide.md  multi_backplane_guide.md  neurofab_findings.md  system_design.md  system_integration_guide.md  user_guide.md
docs/examples/: MNIST_STDP_Training.md
embedded_firmware/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md
embedded_firmware/app_template/: app_firmware.ld  app_main.c
embedded_firmware/bootloader/: CMakeLists.txt  z1_bootloader.c  z1_bootloader.h
embedded_firmware/common/: z1_matrix_bus.h  z1_protocol.h  z1_protocol_extended.h
embedded_firmware/controller/: CMakeLists.txt  controller_main.c  controller_main_with_http.c  psram_rp2350.c  ssd1306.c  ssd1306.h  w5500_driver.c  w5500_driver.h  w5500_http_server.c  w5500_http_server.h  z1_display.c  z1_display.h  z1_http_api.c  z1_http_api.h  z1_matrix_bus.h  z1_protocol_extended.c  z1_reference_implementation.c
embedded_firmware/node/: CMakeLists.txt  font.h  hw_config.c  node.c  psram_rp2350.c  psram_rp2350.h  ssd1306.c  z1_matrix_bus.c  z1_matrix_bus.h  z1_multiframe.c  z1_multiframe.h  z1_neuron_cache.c  z1_neuron_cache.h  z1_psram_neurons.c  z1_psram_neurons.h  z1_snn_engine.c  z1_snn_engine.c.backup  z1_snn_engine.h  z1_snn_engine_v2.c
emulator/: ARCHITECTURE.md  README.md  quick_start.sh  set_emulator_env.sh  test_simple_feedforward.py  test_xor_complete.sh  test_xor_verification.py  z1_emulator.py
emulator/core/: api_server.py  cluster.py  node.py  snn_engine.py  snn_engine_stdp.py
emulator/examples/: default_config.json  multi_backplane_config.json  simple_feedforward.json  test_emulator.sh  xor_snn_stdp.json  xor_snn_tuned.json
emulator/lib/: cluster_config.py  snn_compiler.py  z1_client.py
emulator/tools/: README.md  ncat  nflash  nsnn  nstat
firmware_releases/: z1_controller_v1.0.uf2  z1_controller_v1.1_with_http.uf2  z1_controller_v3.0_PRODUCTION_READY.uf2  z1_node_v1.0.uf2  z1_node_v2.0_psram.uf2  z1_node_v2.1_PRODUCTION_READY.uf2
python_tools/: README.md
python_tools/examples/: xor_correct.json
python_tools/lib/: cluster_config.py  snn_compiler.py
